samples/_failures_safe/1761005167_b4be83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b2b7535.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_4b2b7535.c:141:5: error: expected expression at end of input
  141 |     } else
      |     ^
./samples/SAFE/__tmp_4b2b7535.c:141:5: error: expected declaration or statement at end of input
